criado o arquivo home

--- a/home.html
+++ b/home.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Empresa XYZ/title>
 </head>
 <body>
+    <header>
+        <h1>Empresa XYZ</h1>
+    </header>
+    <main>
+        <h2>Bem-vindo a EMpresa XYZ</h2>
+        <p>Somos uma empresa dedicada a oferecer soluções inovadoras para nossos clientes</p>
+    </main>
+    <footer>
+        <p>Empresa XYZ. Todos os direitos reservados</p>
+    </footer>
     
 </body>
 </html>
