--- a/home.html
+++ b/home.html
@@ -8,7 +8,13 @@
 <body>
     <header>
         <h1>Empresa XYZ</h1>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="contato.html">Contato</a>
+        </nav>
     </header>
+
     <main>
         <h2>Bem-vindo a EMpresa XYZ</h2>
         <p>Somos uma empresa dedicada a oferecer soluções inovadoras para nossos clientes</p>
